fixed text alignment

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -27,14 +27,13 @@ h3 {
 
 .flex {
     display: flex;
-    flex: 1 1 0;
+    flex: 1;
     gap: 100px;
     padding: 100px 0;
-    min-height: 100vh;
-    align-items: center;
 
     > * {
-        flex: 1 1 33%;
+        flex: 1;
+        margin-top: 50px;
     }
 }
 
